# solver

./: BUILD.bazel  Makefile  README.md  constraint.go  datadriven_test.go  go.mod  interval.go  intvar.go  linearexpr.go  model.go  options.go  result.go
internal/: BUILD.bazel  internal.go  internal_test.go  sat.i
internal/pb/: BUILD.bazel
internal/testutils/: BUILD.bazel  compile.go  scanner.go
internal/testutils/bazel/: BUILD.bazel
internal/testutils/parser/: BUILD.bazel  parser.go  parser_test.go
internal/testutils/parser/ast/: BUILD.bazel  argument.go
internal/testutils/parser/lexer/: BUILD.bazel  lexer.go  lexer_test.go
internal/testutils/parser/token/: BUILD.bazel
